# santacruzbiga

./: .gitignore  Cargo.toml  Makefile  README.md  apollo.config.js  fuse.ts  go.mod  go.sum  gqlgen.yml  package.json  package.yaml  rollup.config.ts  santacruzbiga.cabal  schema.graphql  server.go  simpleschema.graphql  tsconfig.json
app/: main.go
graph/: resolver.go  schema.graphql  schema.resolvers.go
graph/model/: models_gen.go
js/client/: index.html  index.ts
migrations/2020-03-14-060817_create_users/: down.sql  up.sql
src/: Main.hs  db.rs  main.go  main.rs  santacruzbiga.go  schema.graphql
src/schemas/: product.rs  root.rs  user.rs
src/server/: main.go
templates/: base.qtpl  base.qtpl.go  graphiql.html  index.html  index.qtpl  index.qtpl.go
test/: app.e2e-spec.ts
ts/client/: Hello.vue  apollo.ts  index.html  index.ts  index.tsx
ts/server/: Html.tsx  index.ts  index.tsx
