[package]
name = "santacruzbiga"
version = "0.1.0"
authors = ["Carolyn Knight-Serrano <gigavinyl@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
tera = "1"
actix-web = "2.0.0"
actix-rt = "1.0.0"