[package]
name = "santacruzbiga"
version = "0.1.0"
authors = ["Carolyn Knight-Serrano <gigavinyl@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
env_logger = "0.7"
juniper = "0.14.2"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15"
postgres = "0.17.2"